cloud_engineering/proxy_ingress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: SERVICE_NAME
  namespace: NAMESPACE
spec:
  externalName: DST_FQDN
  sessionAffinity: None
  type: ExternalName
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
