cloud_engineering/proxy_ingress/base/ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: cert-manager-letsencrypt-production-dns
      kubernetes.io/tls-acme: "true"
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_ssl_protocols TLSv1.2 TLSv1.3;
        proxy_ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/upstream-vhost: DST_FQDN
    name: SERVICE_NAME-forwarder
    namespace: NAMESPACE
  spec:
    ingressClassName: nginx-ENDPOINT
    rules:
    - host: FQDN
      http:
        paths:
        - backend:
            service:
              name: SERVICE_NAME
              port:
                number: 443
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - FQDN
      secretName: tls-SERVICE_NAME-crt
